# Geographical-Information-Systems-with-Quad-Tree

./: .gitignore  README.md
geographical-system/: Box.cpp  CMakeLists.txt  Quadtree.cpp  Quadtree.h  insertpage.cpp  insertpage.h  insertpage.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  pointstable.cpp  pointstable.h  pointstable.ui
src/: Box.cpp  Box.h  Point.cpp  Point.h  Quadtree.cpp  Quadtree.h  main.cpp  matplotlibcpp.h
